[gd_scene load_steps=6 format=3 uid="uid://col8nsgvpdnek"]

[ext_resource type="Script" uid="uid://df4kuun2rp5f7" path="res://scripts/pause_menu.gd" id="1_myx47"]
[ext_resource type="FontFile" uid="uid://clf16s2dyme50" path="res://assets/fonts/Ubuntu-Regular.ttf" id="1_n87rw"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_myx47"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kukqi"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_5d2l8"]
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[node name="PauseMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_myx47")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1764706, 0.1764706, 0.1764706, 1)

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 0
theme_override_constants/margin_left = 5
theme_override_constants/margin_top = 5
theme_override_constants/margin_right = 5
theme_override_constants/margin_bottom = 5

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/MarginContainer"]
layout_mode = 2

[node name="Title" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer/Title"]
custom_minimum_size = Vector2(0, 23)
layout_mode = 2
theme_override_styles/separator = SubResource("StyleBoxEmpty_myx47")

[node name="TitleLabel" type="Label" parent="PanelContainer/MarginContainer/VBoxContainer/Title"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("1_n87rw")
theme_override_font_sizes/font_size = 48
text = "Paused"

[node name="HSeparator" type="HSeparator" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 160
theme_override_styles/separator = SubResource("StyleBoxEmpty_kukqi")

[node name="Continue" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="PanelContainer" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Continue"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_5d2l8")

[node name="ContinueButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Continue/PanelContainer"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_n87rw")
theme_override_font_sizes/font_size = 24
text = "Continue"

[node name="Settings" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Settings"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_5d2l8")

[node name="SettingsButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Settings/PanelContainer2"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_n87rw")
theme_override_font_sizes/font_size = 24
text = "Settings"

[node name="Quit" type="VBoxContainer" parent="PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="PanelContainer3" type="PanelContainer" parent="PanelContainer/MarginContainer/VBoxContainer/Quit"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_5d2l8")

[node name="QuitButton" type="Button" parent="PanelContainer/MarginContainer/VBoxContainer/Quit/PanelContainer3"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("1_n87rw")
theme_override_font_sizes/font_size = 24
text = "Quit
"

[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Continue/PanelContainer/ContinueButton" to="." method="_on_continue_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Settings/PanelContainer2/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PanelContainer/MarginContainer/VBoxContainer/Quit/PanelContainer3/QuitButton" to="." method="_on_quit_button_pressed"]
